Bug 1830721 - Update non-client margins before changing fullscreen mode; r=rkraesig

We were replying on the resize event fired for fullscreen mode change to
trigger reflow. But in
https://phabricator.services.mozilla.com/D175215,
we started notifying sizemodechange after fullscreen mode has changed,
which could result in the layout not being updated properly.

Differential Revision: https://phabricator.services.mozilla.com/D177103